k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: dgiap/fashion-order-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
  - name: orderservice
    protocol: TCP
    port : 8080
    targetPort: 8080
  - name: orderservice-grpc
    protocol: TCP
    port : 666
    targetPort: 666
