k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: productservice
          image: dgiap/fashion-product-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: productservice-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: productservice
  ports:
  - name: productservice
    protocol: TCP
    port : 8080
    targetPort: 8080
  - name: productservice-grpc
    protocol: TCP
    port : 666
    targetPort: 666
